# cloudpub

./: .gitignore  LICENSE  README.md  TODO  account.coffee  app.coffee  checker.coffee  cloudfu.coffee  cloudpub.coffee  command.coffee  domain.coffee  dp  ec2.coffee  env.coffee  fu  group.coffee  index.js  instance.coffee  io.coffee  kya  logger.coffee  main.coffee  memory.coffee  module.coffee  nginx.vhost  npm.coffee  package.json  pam.node  proxy.coffee  publish  queue.coffee  registry.coffee  rest.coffee  runtests  runtime.coffee  server  server.js  service.coffee  serviceGroup.coffee  session.coffee  (+9 more)
assets/css/: app.styl  bootstrap.css  main.styl  service.styl
assets/js/: account.coffee  app.coffee  bootstrap-modal.js  cloudfu.coffee  common.coffee  instance.coffee  instancies.coffee  login.coffee  main.coffee  register.coffee  service.coffee  services.coffee  worker.coffee
client/: Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm  Dockerfile.arm64  build.rs  cloudpub.py  entrypoint.sh  synology.sh
client/locales/: en.ftl  ru.ftl
client/src/: base.rs  client.rs  commands.rs  config.rs  httpd.rs  i18n.rs  lib.rs  main.rs  ping.rs  shell.rs
client/src/minecraft/: mod.rs  server.properties
client/src/mod_1c/: default.vrd  httpd.conf  mod.rs
client/src/onec/: httpd.conf  mod.rs
client/src/plugins/: httpd.rs  mod.rs  plugin_trait.rs  registry.rs
client/src/plugins/minecraft/: mod.rs
client/src/plugins/onec/: mod.rs
client/src/plugins/webdav/: httpd.conf  mod.rs
client/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
client/src/webdav/: httpd.conf  mod.rs
cloud/: ec2.coffee  ssh.coffee
common/: Cargo.toml  build.rs
common/src/: config.rs  constants.rs  helper.rs  ipc.rs  lib.rs  logging.rs  protocol.proto  protocol.rs  utils.rs  version.rs
common/src/transport/: mod.rs  rustls.rs  tcp.rs  websocket.rs
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/blog/: 2024-09-01-welcome.md  2024-09-30-create-tunnel.md  2024-10-04-1c-publishing.md  2024-10-11-minecraft.md  2024-10-17-logs.md  2024-11-10-version-1.2.md  2025-01-30-rtsp.md
docs/docs/: 1c.md  changelog.md  cli.md  docker.md  http.md  intro.md  minecraft.md  tcp.md  webdav.md
docs/en/: docusaurus.config.ts  sidebars.ts
docs/en/docs/: auth.md  changelog.md  cli.md  docker.md  http.md  intro.md  minecraft.md  rtsp.md  tcp.md  webdav.md
docs/marketing/: anounce-post.md
docs/ru/: docusaurus.config.ts  package-lock.json
docs/ru/blog/: 2024-10-04-1c-publishing.md  2024-11-25-django.md  2024-12-17-version-1.3.md  2025-04-09-version-1.5.md
docs/ru/docs/: auth.md  changelog.md  cli.md  rtsp.md  tcp.md
docs/ru/src/css/: custom.css
pam/: .lock-wscript  pam.cc
pam/demo/: demo.js
patched_modules/socket.io-client/lib/: socket.js
public/: ZeroClipboard.js  code_editor.html
pubs/: cloudpub.coffee  npm.coffee  proxy.coffee  runtime.coffee
services/: cloudpub.coffee  elgg.apache.conf  elgg.coffee
test/: appStart.coffee  appStop.coffee  checker.coffee  core.coffee  instance.coffee  instanceStart.coffee  instanceStop.coffee  service.coffee  state.coffee  test.coffee
tests/: Cargo.toml
tests/benches/http/: latency.sh
tests/benches/mem/: mem.sh  plot.plt
tests/certs/: localhost.crt  localhost.key
tests/config/: client.toml  server.toml
tests/tests/: commands.rs  common.rs  traffic.rs
views/: account.jade  app.jade  cloudfu.jade  instance-inline.jade  instance-list.jade  instance.jade  instancies-table.jade  instancies.jade  layout.jade  login.jade  main.jade  register.jade  service-inline.jade  service-list.jade  service.jade  services-table.jade  services.jade  worker.jade
wapp/: cloudpub.coffee  elgg.coffee
