[package]
name = "client"
version = "1.0.0"
edition = "2021"
authors = ["Anton Ermak <anton@ermak.dev>"]
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "clo.exe"
FileDescription = "CloudPub client"
ProductName = "CloudPub"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
common = { path = "../common", features = ["rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
atty = "0.2"
fdlimit = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
lazy_static = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
dirs = "3.0.2"
reqwest = { version = "0.11", features = ["stream", "rustls-tls-manual-roots"]}
indicatif = { version = "0.17.8", features = ["tokio"]}
zip = { version = "2.1.3" }
toml = "0.5"
walkdir = { version="2.3" }
uuid = { version = "1.8.0", features = ["v4"] }
parking_lot = "0.12.3"
hostname = "0.4.0"
url = "2.5.2"
runas = "1.2.0"

# Dependencies for windows config
[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"

[build-dependencies]
winresource = "0.1.17"
