[package]
name = "client"
version = "1.6.0"
edition = "2021"
authors = ["Anton Ermak <anton@ermak.dev>"]

[package.metadata.winres]
OriginalFilename = "clo.exe"
FileDescription = "CloudPub client"
ProductName = "CloudPub"

[lib]
name = "client"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[features]
default = ["plugins", "windows-service"]
plugins = ["zip"]

[dependencies]
common = { path = "../common", features = ["rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive", "env"] }
fdlimit = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
lazy_static = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
dirs = "3.0.2"
reqwest = { default-features = false, version = "0.11", features = ["stream", "rustls-tls-manual-roots", "rustls-tls"]}
indicatif = { version = "0.17.8", features = ["tokio", "improved_unicode"]}
zip = { version = "2.2.1", optional = true }
toml = "0.5"
walkdir = { version="2.3" }
uuid = { version = "1.8.0", features = ["v4"] }
parking_lot = "0.12.3"
hostname = "0.4.0"
url = "2.5.2"
xml-rs = "0.8.22"
ctrlc = "3.4.5"
regex = "1.11.0"
machineid-rs = "1.2.4"
windows-service = { version = "0.8.0", optional = true }
async-trait.workspace = true
rpassword = "7.4.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
