[package]
name = "common"
version = "1.0.0"
edition = "2021"
authors = ["Anton Ermak <anton@ermak.dev>"]
description = "Common code for the client, server, and GUI"
build = "build.rs"
include = ["src/**/*", "build.rs"]

[features]
default = []

# TLS support
rustls = [
    "tokio-rustls",
    "rustls-pemfile",
    "rustls-native-certs",
    "p12",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-unix-tcp = "0.2.0"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
bincode = "1"
lazy_static = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.8"

# Server tracing
tracing = "0.1"
time = "0.3.36"
socket2 = { version = "0.4", features = ["all"] }
async-trait = "0.1"
base64 = { version = "0.13", optional = true }
notify = { version = "5.0.0-pre.13", optional = true }
async-http-proxy = { version = "1.2", features = [
    "runtime-tokio",
    "basic-auth",
] }
async-socks5 = "0.5"
url = { version = "2.2", features = ["serde"] }
tokio-tungstenite = { version = "0.20.1" }
tokio-util = { version = "0.7.9", features = ["io", "net"] }
futures-core = { version = "0.3.28" }
futures-sink = { version = "0.3.28" }
serde_json = "1.0.117"

tokio-rustls = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
p12 = { version = "0.6.3", optional = true }
libc = "0.2.158"

[build-dependencies]
vergen = { version = "7.4.2", default-features = false, features = [
    "build",
    "git",
    "cargo",
] }
anyhow = "1.0"
url = "2.5.2"
