[package]
name = "common"
version = "1.7.0"
edition = "2021"
authors = ["Anton Ermak <anton@ermak.dev>"]
description = "Common code for the client, server, and GUI"
include = ["src/**/*", "build.rs"]

[features]
default = []
english = []

# TLS support
rustls = [
    "tokio-rustls",
    "tokio-tungstenite/rustls",
    "tokio-tungstenite/rustls-tls-native-roots",
    "rustls-pemfile",
    "rustls-native-certs",
    "p12",
]

[build-dependencies]
prost-build = "0.12.3"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-unix-tcp = { git="https://github.com/ermakus/tokio-unix-tcp.git", branch="master" }
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
bincode = "1"
lazy_static = "1.4"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.8"
prost = "0.13.5"

# Server tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
log-panics = { version = "2", features = ["with-backtrace"]}
rolling-file = "0.2.0"

time = "0.3.36"
socket2 = { version = "0.4", features = ["all"] }
async-trait = "0.1"
base64 = { version = "0.13", optional = true }
notify = { version = "5.0.0-pre.13", optional = true }
async-http-proxy = { version = "1.2", features = [
    "runtime-tokio",
    "basic-auth",
] }
async-socks5 = "0.5"
url = { version = "2.5.4", features = ["serde"] }
tokio-tungstenite = { version = "0.21.0", features = ["connect"] }
tokio-util = { version = "0.7.9", features = ["io", "net"] }
futures-core = { version = "0.3.28" }
futures-sink = { version = "0.3.28" }
serde_json = "1.0.117"

tokio-rustls = { version = "0.25.0", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
p12 = { version = "0.6.3", optional = true }
libc = "0.2.158"
parking_lot = "0.12.3"

dirs = "3.0.2"
urlencoding = "2.1.3"

# Localization
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"
