[package]
name = "tests"
version = "1.0.0"
edition = "2021"
authors = ["Anton Ermak <anton@ermak.dev>"]

[dependencies]
common = { path = "../common", features = ["rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
lazy_static = "1.4"
indicatif = { version = "0.17.8", features = ["tokio"]}
rand = "0.8"
serde_json = "1.0.117"
regex = "1"
